--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "upgrade": "rimraf package-lock.json && npx taze major -w && ni"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "@octokit/graphql": "^5.0.5",
     "@prisma/client": "^4.14.0",
     "@tailwindcss/forms": "^0.5.3",
@@ -31,7 +33,9 @@
     "postcss-loader": "^7.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-instagram-embed": "^3.0.0",
     "react-share": "^4.4.1",
+    "react-social-media-embed": "^2.3.5",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-preset-minify": "^6.0.0",
