--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.18",
     "@octokit/graphql": "^5.0.5",
     "@prisma/client": "^4.14.0",
+    "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
@@ -33,6 +34,8 @@
     "postcss-loader": "^7.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-facebook": "^9.0.12",
+    "react-hook-form": "^7.44.3",
     "react-instagram-embed": "^3.0.0",
     "react-share": "^4.4.1",
     "react-social-media-embed": "^2.3.5",
