--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "upgrade": "rimraf package-lock.json && npx taze major -w && ni"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.4",
     "@octokit/graphql": "^5.0.5",
     "@prisma/client": "^4.14.0",
     "@sendgrid/mail": "^7.7.0",
