--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sendgrid/mail": "^7.7.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
     "clsx": "^1.2.1",
     "esbuild": "^0.17.19",
